<resources>
    <string name="app_name">Topic4</string>
    <string name="text">satu dua tiga</string>
    <string name="hobi">Hobi :</string>
    <string name="bola">Bola</string>
    <string name="masak">Masak</string>
    <string name="renang">Renang</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="tujuh">7</string>
    <string name="home">Home</string>
    <string name="mutasi">Mutasi</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="akun">Akun</string>
    <string name="bri">BRI mo</string>
    <string name="jumlh_saldo">Saldo Rekening Utama</string>
    <string name="rekening_lain">Rekening Lain</string>
    <string name="pulsa_data">Pulsa/Data</string>
    <string name="transfer">Transfer</string>
    <string name="dompet_digital">Dompet Digital</string>
    <string name="brizzi">BRIZZI</string>
    <string name="tarik_tunai">Tarik Tunai</string>
    <string name="Briva">BRIVA</string>
    <string name="listrik">Listrik</string>
    <string name="lainnya">Lainnya</string>
    <string name="catatan_keuangan">Catatan Keuangan</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="Rp">Rp. 0</string>
    <string name="Rp2">Rp. 4.944.349</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="selisih">Selisih</string>
    <string name="Rp3">RP. 14.349</string>
    <string name="Rupiah">Rp</string>
    <string name="say_hi">Hai, Moh.Faizal Ilham Falakh</string>
    <string name="title_card">Masuk ke ruang publik ?</string>
    <string name="subtitle_card">Selalu terapkan protokol kesehatan</string>
    <string name="tvCheckin">Pengaturan Check-in</string>
    <string name="check_in">Check-In</string>
    <string name="vaksin_booster">Vaksin Booster</string>
    <string name="hak_vaksin">Anda berhak mendapatkan vaksin booster</string>
    <string name="vaksin_dan_imunisasi">Vaksin dan imunisasi</string>
    <string name="jumlh_saldo_number">100.0000.0000.000</string>
    <string name="ehc">EHC</string>
    <string name="aturan_perjalanan">Aturan Perjalanan</string>
    <string name="pelayanan_kesehatan">Pelayanan kesehatan</string>
    <string name="teledokter">Teledokter</string>
</resources>