<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/satu"
        android:layout_margin="@dimen/dp5"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dua"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp5"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiga"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp5"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empat"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp5"
            android:textAllCaps="false"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lima"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp5"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enam"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp5"
        android:textAllCaps="false"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tujuh"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp5"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobi"
                android:layout_marginTop="@dimen/dp10"
                android:textColor="@color/black"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bola"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masak"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/renang"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>